modify backend to pass 3 scenarios
